tests/fixtures/invalid/round_str_list.py
# Cannot call round() with Str, List[int]
x = round("hello", [1, 2, 3])
